fix dark mode

--- a/SCS_Web_Client/publics/css/pages/login-page-dark.css
+++ b/SCS_Web_Client/publics/css/pages/login-page-dark.css
@@ -1,54 +1,12 @@
-.login-form-container {
-    width: 100%;
-    height: fit-content;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 180px 0;
-}
 
-.login-form {
-    width: 600px;
-    height: 370px;
-    border: 3px solid #86BAEC;
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 0 80px;
-    box-sizing: border-box;
-}
-
-.login-form h2 {
-    padding: 0 20px;
+body.dark .login-form h2 {
     background-color: #18191A;
-    transform: translate(0, -18px);
-    font-size: 30px;
-    color: #6C6C6C;
 }
 
-.login-form .form-input {
-    width: 100%;
-    height: 50px;
-    margin-top: 50px;
-    box-sizing: border-box;
-}
-
-.email {
-    margin-top: 30px !important;
-}
-
-.login-form .form-input .lbl {
-    position: absolute;
-    transform: translate(16px, -60px);
+body.dark .login-form .form-input .lbl {
     background-color: #18191A;
-    padding: 0 10px;
-    font-size: 18px;
-    font-weight: bold;
-    color: #86BAEC;
-    user-select: none;
 }
 
-.login-form .form-input input {
+body.dark .login-form .form-input input {
     background-color: #18191A;
 }
